compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__add_int_float.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 206
expression: 1 + 1.0
snapshot_kind: text
---
----- SOURCE CODE
1 + 1.0

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:5
  │
1 │ 1 + 1.0
  │     ^^^

The + operator expects arguments of this type:

    Int

But this argument has this type:

    Float

Hint: the +. operator can be used with Floats
