compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__bit_array_segment_conflicting_signedness2.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 80
expression: "case <<1>> { <<1:unsigned-signed>> -> 1 }"
snapshot_kind: text
---
----- SOURCE CODE
case <<1>> { <<1:unsigned-signed>> -> 1 }

----- ERROR
error: Invalid bit array segment
  ┌─ /src/one/two.gleam:1:27
  │
1 │ case <<1>> { <<1:unsigned-signed>> -> 1 }
  │                           ^^^^^^ This is an extra signedness specifier

Hint: This segment already has a signedness of unsigned.
See: https://tour.gleam.run/data-types/bit-arrays/
