compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__bit_array_segment_nosize2.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 55
expression: "case <<1>> { <<_:bits, _:bytes>> -> 1 }"
snapshot_kind: text
---
----- SOURCE CODE
case <<1>> { <<_:bits, _:bytes>> -> 1 }

----- ERROR
error: Invalid bit array segment
  ┌─ /src/one/two.gleam:1:18
  │
1 │ case <<1>> { <<_:bits, _:bytes>> -> 1 }
  │                  ^^^^ This segment has no size

Hint: Bit array segments without a size are only allowed at the end of a
bin pattern.
See: https://tour.gleam.run/data-types/bit-arrays/
